Updated copy delivered to git

--- a/custom/css/style1.css
+++ b/custom/css/style1.css
@@ -25,9 +25,6 @@ text-decoration: none !important;
         z-index: 9999;
         background: url(../../custom/images/Preloader_8.gif) center no-repeat #fff;
     }
-.error-block,.help-block,.OTP-error-block,.phone-help-block{
-    color: #fff;
-}
     
     .glyphicon-edit.itemPanel {
         margin-top: 15px;
@@ -42,13 +39,14 @@ text-decoration: none !important;
     .food_item .quantityItem {
         margin-left: 12px !important;
         margin-right: 11px;
-        border: 1px solid;
+        border: 1px dotted;
         padding: 0px 8px 0px 8px;
         border-radius: 0px 10px;
+		border-color: rgb(151, 158, 89);
     }
     
     .rate {
-        color: rgb(70, 0, 14);
+        /*color: rgb(255, 196, 80);*/
     }
     
     body:before {
@@ -160,7 +158,8 @@ text-decoration: none !important;
     .modal-content {
         border-bottom-left-radius: 30px;
         border-top-right-radius: 30px;
-        background-color: rgb(239, 231, 215);
+        background-color: transparent;
+		background: url("../../custom/images/bg_image1.jpg");
     }
     
     .loginButton {
@@ -169,7 +168,7 @@ text-decoration: none !important;
         text-align: center;
         color: #fff;
         border: none;
-        background-color: #c32f10;
+        background-color: rgb(229, 157, 49);
         width: 227px;
         margin-top: 13px;
         padding: 5px;
@@ -207,26 +206,25 @@ text-decoration: none !important;
     }
     
     .omb_login .omb_loginForm .help-block {
-        color: #fff;
+        color: red;
     }
-#userProfilePic{
+    #userProfilePic{
     margin-top: 10px;
-}
-#profileList{
-    margin-bottom: 0px;
-}
-.popover-content{
-    padding: 0px;
-}
-#profileList .list-group-item{
-    background-color: #fff !important;
-  border-top: 1px solid #ddd !important;
-      cursor: pointer;
-}
-#profileList .list-group-item:hover{
-    background-color: #ddd !important;
-}
-    
+	}
+	#profileList{
+		margin-bottom: 0px;
+	}
+	.popover-content{
+		padding: 0px;
+	}
+	#profileList .list-group-item{
+		background-color: #fff !important;
+	  border-top: 1px solid #ddd !important;
+		  cursor: pointer;
+	}
+	#profileList .list-group-item:hover{
+		background-color: #ddd !important;
+	}
     .loginForm {
         padding: 19px;
         margin: -9px;
@@ -260,17 +258,16 @@ text-decoration: none !important;
     }
     
     .categories {
-        height: 642px;
-        background-color: #DFD2B2;
+        height: 635px;
+        background-color: rgb(255, 196, 80);
         padding-right: 0px !important;
         padding-left: 0px !important;
     }
     
     .items {
-        background-color: #fff;
         padding: 12px;
-        min-height: 562px;
-        max-height: 562px;
+        min-height: 550px;
+        max-height: 550px;
         overflow: auto;
     }
     
@@ -288,16 +285,19 @@ text-decoration: none !important;
     }
     
     .itemList {
-        height: 642px;
+        height: 635px;
         padding-left: 0px !important;
         padding-right: 0px !important;
+		border-right: 1px solid rgb(255, 196, 80);
+		  border-bottom: 1px solid rgb(255, 196, 80);
+		  border-radius: 10px 10px 10px 0px;
     }
     
     .img {
         width: 75px;
         height: 75px;
         border: 1px solid #000000;
-        `` border-bottom-left-radius: 20px;
+        border-bottom-left-radius: 20px;
     }
     
     .logo {
@@ -306,7 +306,8 @@ text-decoration: none !important;
     }
     
     .nav-tabs>li>a {
-        color: #fff !important;
+        color: #555 !important;
+		font-weight: bold;
     }
     
     .breakFast {
@@ -325,30 +326,34 @@ text-decoration: none !important;
     }
     
     .lateNight {
-        background-color: rgb(70, 0, 14);
+        background-color: rgb(255, 196, 80);
         border-top-right-radius: 10px;
     }
 }
 .glyphicon-th-list {
-    color: rgb(70, 0, 14);
+    color: rgb(255, 196, 80);
 }
 .navbar-default {
-    background-color: #FFFFFF !important;
+    background-color: rgb(255, 196, 80) !important;
 }
 .navbar-bottom{
   margin-top: 70px;
   margin-bottom: 0px !important;
 }
-.list-group-item {
-    background-color: rgb(223, 210, 178) !important;
-    border: 0px !important;
+.list-group-item.inActive {
+    background-color: rgb(255, 196, 80) !important;
+  
+  border: 1px solid rgb(255, 196, 80) !important;
+  border-top: 1px solid rgb(245, 192, 87) !important;
 }
 .list-group-item.activeCat {
-    background-color: rgb(190, 165, 107) !important;
+    
     border: none !important;
+	background-color: white !important;
+	margin: 10px 0px 10px 3px;
 }
 .heading {
-    background-color: rgb(117, 0, 0) !important;
+    background-color: rgb(210,145,51) !important;
     font-size: 18px;
     height: 42px;
     color: white;
@@ -370,20 +375,20 @@ text-decoration: none !important;
 }
 
 .nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
-  background-color: #A0001C !important;
+  background-color: #E59D31 !important;
 }
 
 .btn-primary {
-  background-color: #A0001C !important;
-  border-color: #A0001C !important;
+  background-color: rgb(229, 157, 49) !important;
+  border-color: rgb(229, 157, 49) !important;
 }
 
 .panel-primary {
-  border-color: #A0001C !important;
+  border-color: #E59D31 !important;
 }
 .panel-primary>.panel-heading {
-  background-color: #A0001C !important;
-  border-color: #A0001C !important;
+  background-color: #E59D31 !important;
+  border-color: #E59D31 !important;
 }
 .well{
       padding-bottom: 30px;
@@ -402,16 +407,13 @@ text-decoration: none !important;
     margin-top: 7px !important;
     padding-bottom: 25px !important;
     padding-top: 6px !important;
-    background-color: #a0001c !important;
+    background-color: rgb(210,145,51) !important;
     color: #ffffff !important;
     border-top-right-radius: 10px;
 }
-.item-type:hover {
-    background-color: rgb(204, 183, 141) !important;
-}
 .cart {
     min-height: 300px;
-    background-color: rgb(70, 0, 14);
+    background-color: rgb(255, 196, 80);
     width: 292px;
     border-radius: 10px;
     max-height: 450px;
@@ -420,18 +422,18 @@ text-decoration: none !important;
 .cartItems {
     padding: 5px;
     min-height: 300px;
-    background: -webkit-linear-gradient(#CCC1AA, white, #CCC1AA);
+    /*background: -webkit-linear-gradient(#CCC1AA, white, #CCC1AA);*/
     /* For Safari 5.1 to 6.0 */
     
-    background: -o-linear-gradient(#CCC1AA, white, #CCC1AA);
+  /*  background: -o-linear-gradient(#CCC1AA, white, #CCC1AA);*/
     /* For Opera 11.1 to 12.0 */
     
-    background: -moz-linear-gradient(#CCC1AA, white, #CCC1AA);
+  /*  background: -moz-linear-gradient(#CCC1AA, white, #CCC1AA);*/
     /* For Firefox 3.6 to 15 */
     
-    background: linear-gradient(#CCC1AA, white, #CCC1AA);
+   /* background: linear-gradient(#CCC1AA, white, #CCC1AA);*/
     /* Standard syntax (must be last) */
-    
+    background-color: white;
     margin-bottom: 16px;
     font-family: segoe-Light;
     padding-bottom: 25px;
@@ -452,7 +454,7 @@ text-decoration: none !important;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 .scroll::-webkit-scrollbar-thumb {
-    background-color: rgb(204, 190, 173);
+    background-color: rgb(255, 196, 80);
     outline: 1px solid slategrey;
     width: 40px;
 }
@@ -469,10 +471,10 @@ text-decoration: none !important;
     margin-left: 0px;
 }
 .hrLine {
-    border-top: 1px solid #a0001c !important;
+    border-top: 1px solid rgb(255, 196, 80) !important;
 }
 .customize {
-    background-color: #46000E !important;
+    background-color: rgb(229, 157, 49)!important;
     text-align: center;
     width: 138px;
     margin-left: auto;
@@ -489,7 +491,7 @@ text-decoration: none !important;
     margin-bottom: -15px;
 }
 #checkout {
-    background-color: #46000E !important;
+    background-color: rgb(229, 157, 49) !important;
     color: #fff;
     margin-top: -12px;
     padding: 5px;
@@ -500,9 +502,9 @@ text-decoration: none !important;
     position: absolute;
     top: 0;
     right: 0;
-    border-top: 15px solid #CCC1AA;
-    border-left: 15px solid #46000E;
-    border-bottom: 15px solid #CCC1AA;
+    border-top: 15px solid white;
+    border-left: 15px solid rgb(229, 157, 49);
+    border-bottom: 15px solid white;
     width: 0;
 }
 .decrement {
@@ -662,6 +664,8 @@ ul.product-line-items li input[type="radio"] {
 .modal-header .close {
     margin-top: 3px !important;
     margin-right: 12px !important;
+	color: rgb(229, 157, 49) !important;
+	opacity: 0.9 !important;
 }
 .customizeFoodBody .product-name {
     float: left;
@@ -670,7 +674,7 @@ ul.product-line-items li input[type="radio"] {
 .modal-body.customizeFoodBody {
     padding-top: 0px !important;
     text-align: center;
-    margin-top: -10%;
+    margin-top: 2%;
 }
 .navToggle {
     height: 40px !important;
@@ -689,6 +693,8 @@ ul.product-line-items li input[type="radio"] {
     padding-bottom: 0px !important;
     border-bottom: 0px;
     padding: 25px !important;
+	color: rgb(229, 157, 49);
+	height: 91px;
 }
 .modal-content < .customizeFoodHeader {
     background-color: red;
@@ -701,27 +707,27 @@ ul.product-line-items li input[type="radio"] {
 #customizeFoodBut,
 #customizeFoodButCart,
 #DeleteButCart {
-    background-color: #46000E !important;
+    background-color: rgb(229, 157, 49) !important;
     border-bottom-left-radius: 20px;
     border-top-right-radius: 20px;
     text-align: center;
     color: #fff;
-    border: none;
-    
+    border: none;    
     margin-top: 13px;
     padding: 5px 20px 5px 20px;
+	margin-right: 10px;
 }
 #customizeFoodBut {
     margin-left: 60px;
     margin-bottom: 10px;
 }
 .nav-tabs>li>a:hover {
-    background-color: rgb(70, 0, 14) !important;
-    border-color: rgb(70, 0, 14) !important;
+    background-color: rgb(255, 196, 80) !important;
+    border-color: rgb(255, 196, 80) !important;
 }
 .nav-tabs>li>a:focus {
-    background-color: rgb(70, 0, 14) !important;
-    border-color: rgb(70, 0, 14) !important;
+    background-color: rgb(255, 196, 80) !important;
+    border-color: rgb(255, 196, 80) !important;
 }
 img.img.media-object.visible-xs {
     margin-right: 3%;
@@ -732,7 +738,8 @@ img.img.media-object.visible-xs {
 }
 .cartItemCount.active {
     background-color: rgb(238, 179, 64) !important;
-    color: rgb(70, 0, 14);
+    color: white;
+	font-weight: bold;
 }
 .cartItemCount {
     position: absolute;
@@ -758,7 +765,7 @@ img.img.media-object.visible-xs {
     font-weight: bold;
 }
 li.food_item {
-    background-color: rgb(233, 223, 199);
+/*    background-color: rgb(233, 223, 199);
     padding-bottom: 0em !important;
     padding: 0 0.5em;
     margin-top: 0.5em;
@@ -766,9 +773,16 @@ li.food_item {
     display: block;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     -webkit-tap-highlight-color: transparent;
-    /* For some Androids */
     
-    border-radius: 4px;
+    
+    border-radius: 4px;*/
+	background-color: transparent;
+  padding-bottom: 0em !important;
+  padding: 0 0.5em;
+  padding-top: 5px;
+  display: block;
+  box-shadow: 3px 3px 10px 0px rgba(0,0,0,0.75);
+  
 }
 .round-button {
     display: block;
@@ -781,7 +795,7 @@ li.food_item {
     color: black;
     text-align: center;
     text-decoration: none;
-    /* background: none repeat scroll 0% 0% #46000E; */
+    /* background: none repeat scroll 0% 0% rgb(255, 196, 80); */
     /* box-shadow: 0px 0px 3px #808080; */
     
     font-size: 16px;
@@ -816,7 +830,7 @@ li.food_item {
 }
 .cartMinus1,
 .cartPlus1 {
-    font-size: 14px;
+    font-size: 18px;
 }
 .glyphicon-edit,
 .glyphicon-shopping-cart,
@@ -914,12 +928,9 @@ a.list-group-item {
 .trash {
     cursor: pointer;
 }
-.clearCart:hover {
-    color: red;
-}
 .panel-default>.panel-heading {
     color: #FFF;
-    background-color: rgb(160, 0, 28);
+    background-color: rgb(255, 196, 80);
     border-color: #ddd;
     font-weight: bold;
 }
@@ -932,8 +943,6 @@ text-align: right;
 }
 
 .HPHeader2 {
-    background-color: #f8f8f8;
-    border: 1px solid lightgray;
     font-size: 14px;
     padding: 3px;
 }
@@ -958,11 +967,10 @@ text-align: right;
 	font-weight: bold;
 }
 .sort_second {
-    background-color: rgb(233, 223, 199);
     border-radius: 5px;
 }
 .sort li:hover {
-    background-color: rgb(204, 183, 141);
+    background-color: rgb(255, 196, 80);
     border-radius: 10px;
 }
 .sort li a {
@@ -1035,7 +1043,7 @@ text-align: right;
 @media (min-width: 1150px) {
     .categories {
         width: 13% !important;
-        margin-left: 6% !important;
+        margin-left: 6% !important;.
     }
 }
     
@@ -1048,3 +1056,28 @@ text-align: right;
 	#cartCheckout > thead > tr > th{
 		font-weight: bold;
 	}
+	.glyphicon-plus-sign, .glyphicon-minus-sign{
+		color: rgb(151, 158, 89);
+	}
+	button.addCart.itemPanel {
+	  border-radius: 5px;
+	  margin-top: 11px;
+	  margin-left: 10px;
+	  font-weight: bold;
+	  background-color: rgb(113, 112, 110);
+	  color: white;
+	}
+	.bootstrap-dialog.type-primary .modal-header{
+		background-color: rgb(229, 157, 49) !important;
+	}
+	.link{
+		color: rgb(229, 157, 49);
+		font-weight: bold;
+	}
+	.checkoutTotalAmount{
+		font-size: 15px;
+		font-weight: bold;
+	}
+	.catIncon{
+		margin-right: 5px;
+		}
