Payment in check out page

--- a/custom/css/style1.css
+++ b/custom/css/style1.css
@@ -259,7 +259,7 @@ text-decoration: none !important;
     }
     
     .categories {
-        height: 635px;
+        max-height: 635px;
         background-color: rgb(255, 196, 80);
         padding-right: 0px !important;
         padding-left: 0px !important;
@@ -373,6 +373,9 @@ text-decoration: none !important;
 }
 .well .list-group-item {
   background-color: #fff !important;
+}
+.categories .stummyBrandingBottom{
+      width: 18% !important;
 }
 
 .nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
