--- a/custom/css/style1.css
+++ b/custom/css/style1.css
@@ -31,9 +31,9 @@ text-decoration: none !important;
         top: 0px;
         width: 100%;
         height: 100%;
-        z-index: 9999;
-		opacity: 0.8;
-        background: url(../../custom/images/Preloader_8.gif) center no-repeat;
+        z-index: 10002;
+		opacity: 0.7;
+        background: url(../../custom/images/Preloader_8.gif) center no-repeat #7F7F7F;
     }
     
     .glyphicon-edit.itemPanel {
@@ -1212,3 +1212,7 @@ text-align: right;
 	table#cartCheckout tfoot td{display:block; }
 	table#cartCheckout tfoot td .btn{display:block;}
 	}
+	.modal-header{
+		border-radius: 0px 30px 0px 0px !important;
+	}
+	
