Fixed Profile Icon click issue in mobile
remove category icon and place hamburger menu

--- a/custom/css/style1.css
+++ b/custom/css/style1.css
@@ -1372,3 +1372,7 @@ text-align: left;
   .glyphicon-copy{
 	margin-right:20px;
 	}
+	.navbar-default .navbar-toggle {
+		z-index: 10003;
+		positon: relative;
+	}	
